# single-cell-tools

./: .Rhistory  .gitignore  .readthedocs.yml  CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
resources/: 3Seq_010819_No_Bad_Reads_NoVSX2_3FR_Seq_RB1  clean_up_cluster_info.R  plot_diffex_violins.R
single_cell_tools/: __init__.py  compare_clusters.py  create_seurat_from_triska_data.R  genes_correlated_with_pseudotime_interactive.py  gtfs_to_TPM-FPKM.py  import_gtf.py  plotly_heatmap.py  pseudotime_interactive.py  sc_pseudotime.py  utils.py  velocyto_test.py
tests/: test_single-cell-tools.py
